--- a/src/Docu.Application/Docu.Application.csproj
+++ b/src/Docu.Application/Docu.Application.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Aspose.Words" Version="25.4.0" />
+      <PackageReference Include="Telegram.Bot" Version="22.5.2-dev.3" />
     </ItemGroup>
 
 </Project>
